--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,12 @@
     package="com.seaco.seaconeuropsych" >
 
     <application
+        android:name=".Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name="com.seaco.seaconeuropsych.Intro"
             android:label="@string/app_name" >
@@ -16,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.seaco.seaconeuropsych.prospective_initial"
             android:label="@string/title_activity_prospective_initial" >
