--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait">
 
         <activity
             android:name="com.seaco.seaconeuropsych.Intro"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,59 +24,73 @@
 
         <activity
             android:name="com.seaco.seaconeuropsych.prospective_initial"
-            android:label="@string/title_activity_prospective_initial" >
+            android:label="@string/title_activity_prospective_initial"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.prospective_end"
-            android:label="@string/title_activity_prospective_end" >
+            android:label="@string/title_activity_prospective_end"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.prospective_result"
-            android:label="@string/title_activity_prospective_result" >
+            android:label="@string/title_activity_prospective_result"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.pair_level1"
-            android:label="@string/title_activity_pair_level1" >
+            android:label="@string/title_activity_pair_level1"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.pair_level2"
-            android:label="@string/title_activity_pair_level2" >
+            android:label="@string/title_activity_pair_level2"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.fluid_main"
-            android:label="@string/title_activity_fluid_main" >
+            android:label="@string/title_activity_fluid_main"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.reaction_main"
-            android:label="@string/title_activity_reaction_main" >
+            android:label="@string/title_activity_reaction_main"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.NumericStart"
-            android:label="@string/title_activity_numeric_start" >
+            android:label="@string/title_activity_numeric_start"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.NumericMainActivity"
-            android:label="@string/title_activity_numeric_main" >
+            android:label="@string/title_activity_numeric_main"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.NumericMainInput"
-            android:label="@string/title_activity_numeric_main_input" >
+            android:label="@string/title_activity_numeric_main_input"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.NumericEndReport"
-            android:label="@string/title_activity_numeric_end_report" >
+            android:label="@string/title_activity_numeric_end_report"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.EndBranch"
-            android:label="@string/title_activity_end_branch" >
+            android:label="@string/title_activity_end_branch"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.EndActivity"
-            android:label="@string/title_activity_end" >
+            android:label="@string/title_activity_end"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.seaco.seaconeuropsych.Lights_main"
-            android:label="@string/title_activity_lights_main" >
+            android:label="@string/title_activity_lights_main"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
