--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:screenOrientation="portrait">
-
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.seaco.seaconeuropsych.Intro"
+            android:name=".Intro"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
@@ -21,77 +20,97 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="com.seaco.seaconeuropsych.prospective_initial"
+            android:name=".prospective_initial"
             android:label="@string/title_activity_prospective_initial"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" >
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.prospective_end"
+            android:name=".pair_intro"
+            android:label="@string/title_activity_pair_intro"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+        </activity>
+        <activity
+            android:name=".prospective_end"
             android:label="@string/title_activity_prospective_end"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.prospective_result"
+            android:name=".prospective_result"
             android:label="@string/title_activity_prospective_result"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.pair_level1"
+            android:name=".pair_level1"
             android:label="@string/title_activity_pair_level1"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.pair_level2"
+            android:name=".pair_level2"
             android:label="@string/title_activity_pair_level2"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.fluid_main"
+            android:name=".fluid_main"
             android:label="@string/title_activity_fluid_main"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.reaction_main"
+            android:name=".reaction_main"
             android:label="@string/title_activity_reaction_main"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.NumericStart"
+            android:name=".NumericStart"
             android:label="@string/title_activity_numeric_start"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.NumericMainActivity"
+            android:name=".NumericMainActivity"
             android:label="@string/title_activity_numeric_main"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.NumericMainInput"
+            android:name=".NumericMainInput"
             android:label="@string/title_activity_numeric_main_input"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.NumericEndReport"
+            android:name=".NumericEndReport"
             android:label="@string/title_activity_numeric_end_report"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.EndBranch"
+            android:name=".EndBranch"
             android:label="@string/title_activity_end_branch"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.EndActivity"
+            android:name=".EndActivity"
             android:label="@string/title_activity_end"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
         <activity
-            android:name="com.seaco.seaconeuropsych.Lights_main"
+            android:name=".Lights_main"
             android:label="@string/title_activity_lights_main"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         </activity>
+
     </application>
 
 </manifest>
